--- a/read_diary.app/Contents/Info.plist
+++ b/read_diary.app/Contents/Info.plist
@@ -66,11 +66,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>395</real>
+		<real>299</real>
 		<key>savedFrame</key>
-		<string>592 250 700 678 0 0 1728 1079 </string>
+		<string>128 371 700 678 0 0 1728 1079 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
