--- a/read_diary.app/Contents/Info.plist
+++ b/read_diary.app/Contents/Info.plist
@@ -68,9 +68,9 @@
 		<key>positionOfDivider</key>
 		<real>299</real>
 		<key>savedFrame</key>
-		<string>128 371 700 678 0 0 1728 1079 </string>
+		<string>128 359 700 678 0 0 1728 1079 </string>
 		<key>selectedTab</key>
-		<string>description</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
